--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
-<h1> Welcome to my webpage! </h1>
-<p> BOYAAHHHH!!!</p>
+<h1> This is Joonathan Lutabingwas Charlotte Homepage!</h1>
+<p> This is the site for my web-based work for my itis class</p>
+<ul>
+    <li> Go to<a href="itis3135.html">My ITIS webpage</a></li>
+</ul>
 
