--- a/itis3135/index.html.html
+++ b/itis3135/index.html.html
@@ -1,5 +1,5 @@
-<h1> This is Joonathan Lutabingwas Charlotte Homepage!</h1>
+<h1> This is Jonathan Lutabingwas Github webpage!</h1>
 <p> This is the site for my web-based work for my itis class</p>
 <ul>
-    <li <a href="itis3135"/> My ITIS webpage />
+    <li> Go to<a href="itis3135.html">My ITIS webpage</a></li>
 </ul>
