figuring out pages

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<h1> This is Jonathan Lutabingwas Charlotte Homepage!</h1>
+<h1> This is Jonathan Lutabingwas Github Homepage!</h1>
 <p> This is the site for my web-based work for my itis class</p>
 <ul>
-    <li> Go to<a href="itis3135.html">My ITIS webpage</a></li>
+    <li> Go to <a href="itis3135.html">My ITIS webpage</a></li>
 </ul>
 
