--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,5 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head> 
+    <meta charset="UTF-8">
+    <title> Charlotte Homepage </title>
+</head> 
+<body>
 <h1> This is Jonathan Lutabingwas Charlotte homepage!</h1>
 <p> This is the site for my web-based work for my itis class</p>
 <ul>
     <li> Go to <a href="itis3135.html"> My ITIS webpage</a></li>
 </ul>
+</body>
+</html>
