Trying to get weboages.charlotte to work again

--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head> 
+    <meta charset="UTF-8">
+    <title> Charlotte Homepage </title>
+</head> 
+<body>
 <h1> This is Jonathan Lutabingwas Github Homepage!</h1>
-
-
-
+<p> This is the site for my web-based work</p>
+<ul>
+    <li> Go to <a href="itis3135.html"> My ITIS webpage</a></li>
+</ul>
+</body>
+</html>
