--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -6,10 +6,10 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
 <body>
-<h1> This is Jonathan Lutabingwas Charlotte homepage!!!</h1>
+<h1> This is Jonathan Lutabingwas ITIS homepage!!!</h1>
 <p> This is the site for my web-based work for my itis class</p>
 <ul>
-    <li> Go to <a href="itis3135.html"> My ITIS webpage</a></li>
+    <li> Go to <a href="itis3135"> My ITIS webpage</a></li>
 </ul>
 </body>
 </html>
