--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -6,10 +6,7 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
 <body>
-<h1> This is Jonathan Lutabingwas ITIS homepage!!!</h1>
-<p> This is the site for my web-based work for my itis class</p>
-<ul>
-    <li> Go to <a href="itis3135"> My ITIS webpage</a></li>
-</ul>
+<h1> This is Jonathan Lutabingwas ITIS Website!!!</h1>
+<p> This is the site for my web-based work for my ITIS class</p>
 </body>
 </html>
