--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head> 
 <body>
 <h1> This is Jonathan Lutabingwas Charlotte Homepage!</h1>
-<p> This is the site for my web-based work</p>
+<p> This is my CHarlotte Homepage and links to different sites of mine</p>
 <ul>
     <li> Go to <a href="itis3135"> My ITIS webpage</a></li>
 </ul>
