--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head> 
     <meta charset="UTF-8">
     <title> Charlotte Homepage </title>
+    <link rel="stylesheet" href="styles.css" />
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
 <body>
