--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head> 
     <meta charset="UTF-8">
-    <title> Charlotte Homepage </title>
+    <title> ITIS Homepage </title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
 <body>
