--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head> 
     <meta charset="UTF-8">
     <title> Charlotte Homepage </title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="itis/styles/styles.css" />
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
 <body>
 <h1> This is Jonathan Lutabingwas Charlotte Homepage!</h1>
-<p> This is my CHarlotte Homepage and links to different sites of mine</p>
+<p> This is my Charlotte Homepage and links to different sites of mine</p>
 <ul>
     <li> Go to <a href="itis3135"> My ITIS webpage</a></li>
 </ul>
