--- a/index.html
+++ b/index.html
@@ -2,15 +2,28 @@
 <html lang="en">
 <head> 
     <meta charset="UTF-8">
-    <title> Charlotte Homepage </title>
-    <link rel="stylesheet" href="itis/styles/styles.css" />
+    <title> Joyful Lion Homepage </title>
+    <link rel="stylesheet" href="itis3135/styles/styles.css" />
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
 <body>
-<h1> This is Jonathan Lutabingwas Charlotte Homepage!</h1>
-<p> This is my Charlotte Homepage and links to different sites of mine</p>
-<ul>
-    <li> Go to <a href="itis3135"> My ITIS webpage</a></li>
-</ul>
+ <header>
+    <h1>Joyful Lion's Webpage</h1>
+ <nav>
+    <a href="">link1</a>
+    <a href="">link2</a>
+    <a href="">link3</a>
+ </nav></header>
+ <main>
+    <h2>Welcome</h2>
+    <p>Welcome to our website!</p>
+</main>
+    <footer>
+        <nav>
+            <a href="">link1</a>
+            <a href="">link2</a>
+            <a href="">link3</a>
+        </nav>
+    </footer>
 </body>
 </html>
