--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
  <header>
     <h1>Joyful Lion's Webpage</h1>
  <nav>
-    <a href="">link1</a>
-    <a href="">link2</a>
+    <a href="https://www.linkedin.com/in/jonathan-lutabingwa/">Linkedin</a>
+    <a href="itis3135/">ITIS3135 Course Website</a>
     <a href="">link3</a>
  </nav></header>
  <main>
