--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html lang="en">
 <head> 
     <meta charset="UTF-8">
-    <title> Joyful Lion Homepage </title>
+    <title> Jonathan Lutabingwa's Homepage </title>
     <link rel="stylesheet" href="itis3135/styles/styles.css" />
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
 <body>
  <header>
-    <h1>Joyful Lion's Webpage</h1>
- <nav>
-    <a href="https://www.linkedin.com/in/jonathan-lutabingwa/">Linkedin</a>
-    <a href="itis3135/">ITIS3135 Course Website</a>
-    <a href="">link3</a>
- </nav></header>
+    <h1>Jonathan Lutabingwa's Webpage</h1>
+    <nav>
+        <a href="https://www.linkedin.com/in/jonathan-lutabingwa/">Linkedin</a>
+        <a href="itis3135/">ITIS3135 Course Website</a>
+        <a href="https://github.com/jtlutabingwa">Jonathan Lutabingwas Github</a>
+    </nav>
+</header>
  <main>
     <h2>Welcome</h2>
-    <p>Welcome to our website!</p>
+    <p>Welcome to my Webpage!</p>
 </main>
     <footer>
         <nav>
