--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head> 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width", init
+    <meta name="viewport" content="width=device-width" />
     <title> ITIS Homepage </title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
