--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head> 
     <meta charset="UTF-8">
     <title> Jonathan Lutabingwa's Homepage </title>
-    <link rel="stylesheet" href="itis3135/styles/styles.css" />
+    <link rel="stylesheet" href="itis3135/styles/styles.css"/>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
 <body>
  <header>
     <h1>Jonathan Lutabingwa's Webpage</h1>
+    <h2>Welcome to my Webpage!</h2>
     <nav>
         <a href="https://www.linkedin.com/in/jonathan-lutabingwa/">Linkedin</a>
         <a href="itis3135/">ITIS3135 Course Website</a>
@@ -16,14 +17,13 @@
     </nav>
 </header>
  <main>
-    <h2>Welcome</h2>
-    <p>Welcome to my Webpage!</p>
+    <h2>Coding Website Links</h2>
+    <p>These are just links to lead to my profiles like CodeAcademy and freeCodeCamp.</p>
 </main>
     <footer>
         <nav>
-            <a href="">link1</a>
-            <a href="">link2</a>
-            <a href="">link3</a>
+            <a href="https://www.freecodecamp.org/jonathanlutabingwa">freeCodeCamp</a>
+            <a href="https://www.codecademy.com/profiles/jonathanlutabingwa">CodeAcademy</a>
         </nav>
     </footer>
 </body>
