--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
     <h1>Jonathan Lutabingwa's Webpage</h1>
     <h2>Welcome to my Webpage!</h2>
     <nav>
-        <a href="https://www.linkedin.com/in/jonathan-lutabingwa/">Linkedin</a>
         <a href="itis3135/">ITIS3135 Course Website</a>
-        <a href="https://github.com/jtlutabingwa">Jonathan Lutabingwas Github</a>
-    </nav>
 </header>
  <main>
     <h2>Coding Website Links</h2>
-    <p>These are just links to lead to my profiles like CodeAcademy and freeCodeCamp.</p>
-</main>
+    <p>These are just links to lead to my profiles about me.
     <footer>
         <nav>
             <a href="https://www.freecodecamp.org/jonathanlutabingwa">freeCodeCamp</a>
             <a href="https://www.codecademy.com/profiles/jonathanlutabingwa">CodeAcademy</a>
+            <a href="https://www.linkedin.com/in/jonathan-lutabingwa/">Linkedin</a>
+            <a href="https://github.com/jtlutabingwa">Jonathan Lutabingwas Github</a>
+    </nav>
         </nav>
     </footer>
 </body>
