--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head> 
     <meta charset="UTF-8">
     <title> Jonathan Lutabingwa's Homepage </title>
-    <link rel="stylesheet" href="itis3135/styles/styles.css"/>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+    <style>
+        body {
+        width: 100%;
+        height: 100vh;
+        margin: 0;
+        background-color: lightblue;
+        color: black;
+        font-family: Tahoma;
+        font-size: 16px;
+        }
+    
+        h1, p, a, h2 {
+        margin: 1em auto;
+        text-align: center 
+        }
+    </style>
 </head> 
+
 <body>
  <header>
     <h1>Jonathan Lutabingwa's Webpage</h1>
@@ -15,7 +31,7 @@
 </header>
  <main>
     <h2>Coding Website Links</h2>
-    <p>These are just links to lead to my profiles about me.
+    <p>These are just links to lead to my profiles related to me.
     <footer>
         <nav>
             <a href="https://www.freecodecamp.org/jonathanlutabingwa">freeCodeCamp</a>
