--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,6 +3,7 @@
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="itis3135/styles/styles.css"/>
     <title> ITIS Homepage </title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
