--- a/index.html
+++ b/index.html
@@ -1,45 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
-    <meta charset="UTF-8">
-    <title> Jonathan Lutabingwa's Homepage </title>
-    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-    <style>
-        body {
-        width: 100%;
-        height: 100vh;
-        margin: 0;
-        background-color: lightblue;
-        color: black;
-        font-family: Tahoma;
-        font-size: 16px;
-        }
+    <head> 
+        <meta charset="UTF-8">
+        <title>Jonathan Lutabingwa's Homepage </title>
+        <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+        <style>
+            body {
+            width: 100%;
+            height: 100vh;
+            margin: 0;
+            background-color: lightblue;
+            color: black;
+            font-family: Tahoma;
+            font-size: 16px;
+            }
     
-        h1, p, a, h2 {
-        margin: 1em auto;
-        text-align: center 
-        }
-    </style>
-</head> 
+            h1, p, a, h2 {
+            margin: 1em auto;
+            text-align: center;
+            }
 
-<body>
- <header>
-    <h1>Jonathan Lutabingwa's Webpage</h1>
-    <h2>Welcome to my Webpage!</h2>
-    <nav>
-        <a href="itis3135/">ITIS3135 Course Website</a>
-</header>
- <main>
-    <h2>Coding Website Links</h2>
-    <p>These are just links to lead to my profiles related to me.
-    <footer>
-        <nav>
-            <a href="https://www.freecodecamp.org/jonathanlutabingwa">freeCodeCamp</a>
-            <a href="https://www.codecademy.com/profiles/jonathanlutabingwa">CodeAcademy</a>
-            <a href="https://www.linkedin.com/in/jonathan-lutabingwa/">Linkedin</a>
-            <a href="https://github.com/jtlutabingwa">Jonathan Lutabingwas Github</a>
-    </nav>
-        </nav>
-    </footer>
-</body>
+            nav {
+                display: flex;
+                justify-content: center;
+                gap: 15px;
+            }
+
+            a {
+                text-decoration: none;
+                font-weight: bold;
+                color: darkblue;
+            }
+
+            footer {
+                margin-top: 20px;
+                padding: 10px;
+                background-color: grey;
+                color: white;
+                text-align: center;
+            }
+        </style>
+    </head> 
+
+    <body>
+        <header>
+            <h1>Jonathan Lutabingwa's Webpage</h1>
+            <h2>Welcome to my Webpage!</h2>
+            <nav>
+                <a href="itis3135/">ITIS3135 Course Website</a>
+            </nav>
+        </header>
+        <main>
+            <h2>Coding Website Links</h2>
+            <p>These are just links to lead to my profiles related to me.</p>
+        </main>
+            <footer>
+                <nav>
+                    <a href="https://www.freecodecamp.org/jonathanlutabingwa">freeCodeCamp</a>
+                    <a href="https://www.codecademy.com/profiles/jonathanlutabingwa">CodeAcademy</a>
+                    <a href="https://www.linkedin.com/in/jonathan-lutabingwa/">LinkedIn</a>
+                    <a href="https://github.com/jtlutabingwa">Jonathan Lutabingwas Github</a>
+                </nav>
+            </footer>
+    </body>
 </html>
