--- a/index.html
+++ b/index.html
@@ -46,20 +46,20 @@
         <header>
             <h1>Jonathan Lutabingwa's Webpage</h1>
             <h2>Welcome to my Webpage!</h2>
+            <p>These are just links to lead to my profiles related to me</p>
             <nav>
-                <a href="itis3135/">ITIS3135 Course Website</a>
+                <a href="https://www.freecodecamp.org/jonathanlutabingwa">freeCodeCamp</a>
+                <a href="https://www.codecademy.com/profiles/jonathanlutabingwa">CodeAcademy</a>
+                <a href="https://www.linkedin.com/in/jonathan-lutabingwa/">LinkedIn</a>
+                <a href="https://github.com/jtlutabingwa">Jonathan Lutabingwa's Github</a>
             </nav>
         </header>
         <main>
-            <h2>Coding Website Links</h2>
-            <p>These are just links to lead to my profiles related to me.</p>
+            <h2>ITIS 3135 Website</h2>
         </main>
             <footer>
                 <nav>
-                    <a href="https://www.freecodecamp.org/jonathanlutabingwa">freeCodeCamp</a>
-                    <a href="https://www.codecademy.com/profiles/jonathanlutabingwa">CodeAcademy</a>
-                    <a href="https://www.linkedin.com/in/jonathan-lutabingwa/">LinkedIn</a>
-                    <a href="https://github.com/jtlutabingwa">Jonathan Lutabingwas Github</a>
+                    <a href="itis3135/">ITIS3135 Course Website</a>
                 </nav>
             </footer>
     </body>
