--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -2,13 +2,38 @@
 <html lang="en">
 <head> 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="itis3135/styles/styles.css"/>
-    <title> ITIS Homepage </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/default.css"/>
+    <title> Joyful Lion || ITIS 3135 || Content Page </title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
+
 <body>
-<h1> This is Jonathan Lutabingwas ITIS Website!!!</h1>
-<p> This is the site for my web-based work for my ITIS class</p>
+    <header>
+        <h1> Jonathan Lutabingwa's Joyful Lion</h1>
+        <nav>
+            <a href="./">Home</a>
+            ||
+            <a href="introduction.html">Introduction</a>
+            ||
+            <a href="contract.html>">Contract</a>
+        </nav>
+    </header>
+
+    <main>
+        <h2>ITIS 3135 Home</h2>
+        <p> This is all the content for my ITIS 3135 class</p>
+
+    </main>
+
+    <footer>
+        <a href="https://www.freecodecamp.org/jonathanlutabingwa">freeCodeCamp</a>
+        <a href="https://www.codecademy.com/profiles/jonathanlutabingwa">CodeAcademy</a>
+        <a href="https://www.linkedin.com/in/jonathan-lutabingwa/">LinkedIn</a>
+        <a href="https://github.com/jtlutabingwa">Jonathan Lutabingwa's Github</a>
+        <a href="https://webpages.charlotte.edu/jlutabin/">Charlotte Webpage</a>
+        <a href="https://jtlutabingwa.github.io/">Jonathan Lutabingwas Github.io</a>
+        <a href="https://jtlutabingwa.github.io/itis3135/">Jonathan Lutabingwas ITIS3135 Website</a>
+    </footer>
 </body>
 </html>
