--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -31,7 +31,7 @@
     </main>
 
     <footer>
-        <p>Hoang Firm ©2023</p>
+        <p>Lutabingwa Firm ©2025</p>
         <a href="https://www.freecodecamp.org/jonathanlutabingwa">freeCodeCamp</a> |
         <a href="https://www.codecademy.com/profiles/jonathanlutabingwa">CodeAcademy</a> |
         <a href="https://www.linkedin.com/in/jonathan-lutabingwa/">LinkedIn</a> |
