--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head> 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/default.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="stylesheet" href="styles/default.css">
     <title> Joyful Lion || ITIS 3135 || Content Page </title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
@@ -27,13 +27,13 @@
     </main>
 
     <footer>
-        <a href="https://www.freecodecamp.org/jonathanlutabingwa">freeCodeCamp</a>
-        <a href="https://www.codecademy.com/profiles/jonathanlutabingwa">CodeAcademy</a>
-        <a href="https://www.linkedin.com/in/jonathan-lutabingwa/">LinkedIn</a>
-        <a href="https://github.com/jtlutabingwa">Jonathan Lutabingwa's Github</a>
-        <a href="https://webpages.charlotte.edu/jlutabin/">Charlotte Webpage</a>
-        <a href="https://jtlutabingwa.github.io/">Jonathan Lutabingwas Github.io</a>
-        <a href="https://jtlutabingwa.github.io/itis3135/">Jonathan Lutabingwas ITIS3135 Website</a>
+        <a href="https://www.freecodecamp.org/jonathanlutabingwa"> freeCodeCamp | </a>
+        <a href="https://www.codecademy.com/profiles/jonathanlutabingwa"> CodeAcademy | </a>
+        <a href="https://www.linkedin.com/in/jonathan-lutabingwa/"> LinkedIn | </a>
+        <a href="https://github.com/jtlutabingwa"> Jonathan Lutabingwa's Github | </a>
+        <a href="https://webpages.charlotte.edu/jlutabin/"> Charlotte Webpage | </a>
+        <a href="https://jtlutabingwa.github.io/"> Jonathan Lutabingwas Github.io | </a>
+        <a href="https://jtlutabingwa.github.io/itis3135/"> Jonathan Lutabingwas ITIS3135 Website</a>
     </footer>
 </body>
 </html>
