--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head> 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/default.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="stylesheet" href="styles/default.css">
     <title> Joyful Lion || ITIS 3135 Introduction </title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
@@ -25,8 +25,8 @@
         <h1>Jonathan Lutabingwa: Introduction</h1>
 
         <figure>
-            <img src="IMG_9487.JPG" alt="Picture of Me">
-            <figcaption>Your caption here</figcaption>
+            <img src="C:\Users\IMG_9487.JPG" alt="A picture of me">
+            <figcaption>Me after dinner with family</figcaption>
         </figure>
 
         <ul>
@@ -38,7 +38,7 @@
             <li><strong>Background in this Subject:</strong> I took a few classes in highschool but nothing crazy.</li>
             <li><strong>Primary Computer Platform:</strong> Windows 11
             </li>
-            <li><strong>Courses I'm Taking & Why:</strong>
+            <li><strong>Courses I'm Taking and Why:</strong>
                 <ul>
                     <li><strong>ITIS 3135- Web-Based Application Design and Development: </strong>Required.</li>
                     <li><strong>ITSC 2181- Intro to Computer Systems:</strong>Required.</li>
@@ -56,13 +56,13 @@
 
     <footer>
         <p>Lutabingwa Firm ©2025</p>
-        <a href="https://www.freecodecamp.org/jonathanlutabingwa">freeCodeCamp</a>
-        <a href="https://www.codecademy.com/profiles/jonathanlutabingwa">CodeAcademy</a>
-        <a href="https://www.linkedin.com/in/jonathan-lutabingwa/">LinkedIn</a>
-        <a href="https://github.com/jtlutabingwa">Jonathan Lutabingwa's Github</a>
-        <a href="https://webpages.charlotte.edu/jlutabin/">Charlotte Webpage</a>
-        <a href="https://jtlutabingwa.github.io/">Jonathan Lutabingwas Github.io</a>
-        <a href="https://jtlutabingwa.github.io/itis3135/">Jonathan Lutabingwas ITIS3135 Website</a>
+        <a href="https://www.freecodecamp.org/jonathanlutabingwa"> freeCodeCamp | </a>
+        <a href="https://www.codecademy.com/profiles/jonathanlutabingwa"> CodeAcademy | </a>
+        <a href="https://www.linkedin.com/in/jonathan-lutabingwa/"> LinkedIn | </a>
+        <a href="https://github.com/jtlutabingwa"> Jonathan Lutabingwa's Github | </a>
+        <a href="https://webpages.charlotte.edu/jlutabin/"> Charlotte Webpage | </a>
+        <a href="https://jtlutabingwa.github.io/"> Jonathan Lutabingwas Github.io | </a>
+        <a href="https://jtlutabingwa.github.io/itis3135/"> Jonathan Lutabingwas ITIS3135 Website | </a>
     </footer>
 </body>
 </html>
