--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <footer>
                 <nav>
                     <a href="itis3135/">ITIS3135 Course Website</a>
+                    <a href="joyful_lion/">Joyful Lions Traveling Bookstore</a>
                 </nav>
             </footer>
     </body>
