--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -16,7 +16,7 @@
             ||
             <a href="introduction.html">Introduction</a>
             ||
-            <a href="contract.html>">Contract</a>
+            <a href="contract.html">Contract</a>
         </nav>
     </header>
 
