Design Firm Site

--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -31,7 +31,6 @@
     </main>
 
     <footer>
-        <p>Lutabingwa Firm ©2025</p>
         <a href="https://www.freecodecamp.org/jonathanlutabingwa">freeCodeCamp</a> |
         <a href="https://www.codecademy.com/profiles/jonathanlutabingwa">CodeAcademy</a> |
         <a href="https://www.linkedin.com/in/jonathan-lutabingwa/">LinkedIn</a> |
@@ -39,6 +38,8 @@
         <a href="https://webpages.charlotte.edu/jlutabin/">Charlotte Webpage</a> |
         <a href="https://jtlutabingwa.github.io/">Jonathan Lutabingwa's GitHub.io</a> |
         <a href="https://jtlutabingwa.github.io/itis3135/">Jonathan Lutabingwa's ITIS3135 Website</a>
+        <br>
+        <p>Page built by Lutabingwa Firm ©2025</p>
     </footer>
 </body>
 </html>
