--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -17,6 +17,10 @@
             <a href="introduction.html">Introduction</a>
             ||
             <a href="contract.html">Contract</a>
+            ||
+            <a href="joyful_lion/">Joyful Lions Traveling Bookstore</a>
+            ||
+            <a href="lutabingwagroupinc.com/">Lutabingwa Group Inc.</a>
         </nav>
     </header>
 
@@ -34,6 +38,8 @@
         <a href="https://webpages.charlotte.edu/jlutabin/"> Charlotte Webpage | </a>
         <a href="https://jtlutabingwa.github.io/"> Jonathan Lutabingwas Github.io | </a>
         <a href="https://jtlutabingwa.github.io/itis3135/"> Jonathan Lutabingwas ITIS3135 Website</a>
+        <br>
+        <p>Page built by Lutabingwa Firm ©2025</p>
     </footer>
 </body>
 </html>
