--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <link rel="stylesheet" href="styles/default.css">
-    <title> Joyful Lion || ITIS 3135 Introduction </title>
+    <title> Joyful Lion || ITIS 3135 || Introduction </title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
 
@@ -55,7 +55,6 @@
     </main>
 
     <footer>
-        <p>Lutabingwa Firm ©2025</p>
         <a href="https://www.freecodecamp.org/jonathanlutabingwa"> freeCodeCamp | </a>
         <a href="https://www.codecademy.com/profiles/jonathanlutabingwa"> CodeAcademy | </a>
         <a href="https://www.linkedin.com/in/jonathan-lutabingwa/"> LinkedIn | </a>
@@ -63,6 +62,8 @@
         <a href="https://webpages.charlotte.edu/jlutabin/"> Charlotte Webpage | </a>
         <a href="https://jtlutabingwa.github.io/"> Jonathan Lutabingwas Github.io | </a>
         <a href="https://jtlutabingwa.github.io/itis3135/"> Jonathan Lutabingwas ITIS3135 Website | </a>
+        <br>
+        <p>Page built by Lutabingwa Firm ©2025</p>
     </footer>
 </body>
 </html>
