--- a/itis3135/joyful_lion/index.html
+++ b/itis3135/joyful_lion/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <link rel="stylesheet" href="styles/default.css">
-    <title> Joyful Lion || Traveling Bookstore || Content Page </title>
+    <title> Joyful Lion || Traveling Bookstore || Home Page </title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
 
@@ -16,7 +16,7 @@
             ||
             <a href="about.html">About</a>
             ||
-            <a href="/index.html">Charlotte Homepage</a>
+            <a href="/itis3135/">ITIS Course Website</a>
         </nav>
     </header>
 
