--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -25,7 +25,7 @@
         <h1>Jonathan Lutabingwa: Introduction</h1>
 
         <figure>
-            <img src="" alt="A picture of me">
+            <img src="/itis3135/images/IMG_9487.JPG" alt="A picture of me">
             <figcaption>Me after dinner with family</figcaption>
         </figure>
 
