--- a/itis3135/joyful_lion/about.html
+++ b/itis3135/joyful_lion/about.html
@@ -16,7 +16,7 @@
             ||
             <a href="about.html">About</a>
             ||
-            <a href="/itis3135/">ITIS Course Website</a>
+            <a href="/itis3135/index.html">ITIS Course Website</a>
         </nav>
     </header>
 
