--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <title>Jonathan Lutabingwa's Homepage </title>
         <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
         <style>
+            header {
+                color: rgb(77, 64, 50)
+            }
+
             body {
             width: 100%;
             height: 100vh;
@@ -14,6 +18,10 @@
             font-family: Tahoma;
             font-size: 16px;
             }
+            h2 {
+                color: rgb(77, 64, 50)
+            }
+
     
             h1, p, a, h2 {
             margin: 1em auto;
