--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/default.css">
-    <title>Course Contract</title>
+    <title>Jonathan Lutabingwa's Joyful Lion || ITIS 3135 || Course Contract</title>
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
