--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <link rel="stylesheet" href="styles/default.css">
-    <title> Joyful Lion || ITIS 3135 || Content Page </title>
+    <title> Jonathan Lutabingwa's Joyful Lion || ITIS 3135 || Home Page </title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
 
