--- a/itis3135/lutabingwagroupinc.com/index.html
+++ b/itis3135/lutabingwagroupinc.com/index.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title> Joyful Lion || ITIS 3135 || Lutabingwa Group INC </title>
+    <title> Jonathan Lutabingwa's Joyful Lion || ITIS 3135 || Lutabingwa Group Inc </title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <style>
         body {
