--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -22,6 +22,9 @@
             ||
             <a href="lutabingwagroupinc.com/">Lutabingwa Group Inc.</a>
         </nav>
+        <nav> 
+            <a href="stuff/Cr@Ppy PaGE.html">CRAPPY</a>
+        </nav>
     </header>
 
     <main>
