--- a/itis3135/stuff/Cr@Ppy PaGE.html
+++ b/itis3135/stuff/Cr@Ppy PaGE.html
@@ -15,7 +15,7 @@
 <body style="background-color: white; color: black;">
     <header> 
         <nav>
-            <a href="/itis3135/index.html">ITIS 3135 Homepage</a>
+            <a href="../index.html">ITIS 3135 Homepage</a>
         </nav>
     </header>
     <h2>WeLcome To mY CraPPY WebsItE</h2>
