--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -21,9 +21,10 @@
             <a href="joyful_lion/">Joyful Lions Traveling Bookstore</a>
             ||
             <a href="lutabingwagroupinc.com/">Lutabingwa Group Inc.</a>
+            ||
+            <a href="website_evaluations.html">Website Evaluations</a>
         </nav>
         <nav> 
-            ||
             <a href="stuff/Cr@Ppy PaGE.html">CRAPPY</a>
         </nav>
     </header>
@@ -35,13 +36,15 @@
     </main>
 
     <footer>
-        <a href="https://www.freecodecamp.org/jonathanlutabingwa"> freeCodeCamp | </a>
-        <a href="https://www.codecademy.com/profiles/jonathanlutabingwa"> CodeAcademy | </a>
-        <a href="https://www.linkedin.com/in/jonathan-lutabingwa/"> LinkedIn | </a>
-        <a href="https://github.com/jtlutabingwa"> Jonathan Lutabingwa's Github | </a>
-        <a href="https://webpages.charlotte.edu/jlutabin/"> Charlotte Webpage | </a>
-        <a href="https://jtlutabingwa.github.io/"> Jonathan Lutabingwas Github.io | </a>
-        <a href="https://jtlutabingwa.github.io/itis3135/"> Jonathan Lutabingwas ITIS3135 Website</a>
+        <nav>
+            <a href="https://www.freecodecamp.org/jonathanlutabingwa"> freeCodeCamp | </a>
+            <a href="https://www.codecademy.com/profiles/jonathanlutabingwa"> CodeAcademy | </a>
+            <a href="https://www.linkedin.com/in/jonathan-lutabingwa/"> LinkedIn | </a>
+            <a href="https://github.com/jtlutabingwa"> Jonathan Lutabingwa's Github | </a>
+            <a href="https://webpages.charlotte.edu/jlutabin/"> Charlotte Webpage | </a>
+            <a href="https://jtlutabingwa.github.io/"> Jonathan Lutabingwas Github.io | </a>
+            <a href="https://jtlutabingwa.github.io/itis3135/"> Jonathan Lutabingwas ITIS3135 Website</a>
+        </nav>
         <br>
         <p>Page built by Lutabingwa Firm ©2025</p>
     </footer>
