--- a/itis3135/links.html
+++ b/itis3135/links.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <link rel="stylesheet" href="styles/default.css">
-    <title> Jonathan Lutabingwa's Joyful Lion || ITIS 3135 || Home Page </title>
+    <title> Jonathan Lutabingwa's Joyful Lion || ITIS 3135 || Links </title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head> 
 
@@ -23,8 +23,6 @@
             <a href="lutabingwagroupinc.com/">Lutabingwa Group Inc.</a>
             ||
             <a href="website_evaluations.html">Website Evaluations</a>
-            ||
-            <a href="links.html">Links</a>
         </nav>
         <nav> 
             <a href="stuff/Cr@PpyPaGE.html">CRAPPY</a>
@@ -32,10 +30,16 @@
     </header>
 
     <main>
-        <h2>ITIS 3135 Home</h2>
-        <p> This is all the content for my ITIS 3135 class</p>
-
+        <h2>Activity #4 - Update CSS to include "Next 3" & Mobile</h2>
+        <p>
+            Yes, I have given a max-width to the page or at least to main, 
+            given a percentage width to the page or main, 
+            set the margins to 0, 
+            auto on same, and put in appropriate media queries for 2-3 different sizes. 
+        </p>
+        <p><em>~JL</em></p>
     </main>
+
 
     <footer>
         <nav>
