fix some errors

--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -11,7 +11,21 @@
 <body> 
     <header>
         <h2>Website Evaluations</h2>
-        
+        <nav>
+            <a href="./">Home</a>
+            ||
+            <a href="introduction.html">Introduction</a>
+            ||
+            <a href="contract.html">Contract</a>
+            ||
+            <a href="joyful_lion/">Joyful Lions Traveling Bookstore</a>
+            ||
+            <a href="lutabingwagroupinc.com/">Lutabingwa Group Inc.</a>
+            ||
+            <a href="website_evaluations.html">Website Evaluations</a>
+            ||
+            <a href="links.html">Links</a>
+        </nav>
     </header>
     <main>
         <section>
