--- a/itis3135/lutabingwagroupinc.com/index.html
+++ b/itis3135/lutabingwagroupinc.com/index.html
@@ -104,7 +104,7 @@
         <nav>
             <a href="./">Home</a>
             ||
-            <a href="/itis3135/">ITIS 3135 Homepage</a>
+            <a href="../index.html">ITIS 3135 Homepage</a>
         </nav>
     </header>
 
