Footers/Header Dynamically

--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -6,18 +6,14 @@
     <link rel="stylesheet" href="styles/default.css">
     <title>Jonathan Lutabingwa's Joyful Lion || ITIS 3135 || Course Contract</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+    <script src="scripts/HTML.Include.min.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1>Course Contract</h1>
-        <nav>
-            <a href="./">Home</a> ||
-            <a href="introduction.html">Introduction</a> ||
-            <a href="contract.html">Contract</a>
-        </nav>
-    </header>
+
+    <div data-include="components/header.html"></div>
 
     <main>
+        <h1>Course Contract</h1>
         <h2>Contract Agreement</h2>
         <p>
             I, <strong>Jonathan Lutabingwa</strong>, agree to abide by the terms of the course contract in my <strong>Spring 2024</strong>, <strong>ITIS 3135</strong>, <strong>Web-Based Application Design and Development</strong> class with my instructor, <strong>Professor D.I. von Briesen</strong>.  
@@ -31,16 +27,6 @@
         <p><em>Signed: Jonathan Lutabingwa, 03/02/2024</em></p>
     </main>
 
-    <footer>
-        <a href="https://www.freecodecamp.org/jonathanlutabingwa">freeCodeCamp</a> |
-        <a href="https://www.codecademy.com/profiles/jonathanlutabingwa">CodeAcademy</a> |
-        <a href="https://www.linkedin.com/in/jonathan-lutabingwa/">LinkedIn</a> |
-        <a href="https://github.com/jtlutabingwa">Jonathan Lutabingwa's GitHub</a> |
-        <a href="https://webpages.charlotte.edu/jlutabin/">Charlotte Webpage</a> |
-        <a href="https://jtlutabingwa.github.io/">Jonathan Lutabingwa's GitHub.io</a> |
-        <a href="https://jtlutabingwa.github.io/itis3135/">Jonathan Lutabingwa's ITIS3135 Website</a>
-        <br>
-        <p>Page built by Lutabingwa Firm ©2025</p>
-    </footer>
+    <div data-include="components/footer.html"></div>
 </body>
 </html>
