--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -6,23 +6,14 @@
     <link rel="stylesheet" href="styles/default.css">
     <title> Joyful Lion || ITIS 3135 || Introduction </title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+    <script src="scripts/HTML.Include.min.js" defer></script>
 </head> 
 
 <body>
-    <header>
-        <h1> Jonathan Lutabingwa's Joyful Lion</h1>
-        <nav>
-            <a href="./">Home</a>
-            ||
-            <a href="introduction.html">Introduction</a>
-            ||
-            <a href="contract.html">Contract</a>
-        </nav>
-    </header>
+    <div data-include="components/header.html"></div>
 
     <main>
-        <h2>Introduction Page</h2>
-        <h1>Jonathan Lutabingwa: Introduction</h1>
+        <h2>Jonathan Lutabingwa: Introduction</h2>
 
         <figure>
             <img src="/itis3135/images/IMG_9487.JPG" alt="A picture of me">
@@ -54,16 +45,6 @@
 
     </main>
 
-    <footer>
-        <a href="https://www.freecodecamp.org/jonathanlutabingwa"> freeCodeCamp | </a>
-        <a href="https://www.codecademy.com/profiles/jonathanlutabingwa"> CodeAcademy | </a>
-        <a href="https://www.linkedin.com/in/jonathan-lutabingwa/"> LinkedIn | </a>
-        <a href="https://github.com/jtlutabingwa"> Jonathan Lutabingwa's Github | </a>
-        <a href="https://webpages.charlotte.edu/jlutabin/"> Charlotte Webpage | </a>
-        <a href="https://jtlutabingwa.github.io/"> Jonathan Lutabingwas Github.io | </a>
-        <a href="https://jtlutabingwa.github.io/itis3135/"> Jonathan Lutabingwas ITIS3135 Website | </a>
-        <br>
-        <p>Page built by Lutabingwa Firm ©2025</p>
-    </footer>
+    <div data-include="components/footer.html"></div>
 </body>
 </html>
