--- a/itis3135/lutabingwagroupinc.com/index.html
+++ b/itis3135/lutabingwagroupinc.com/index.html
@@ -21,7 +21,7 @@
             text-align: center;
         }
 
-        header h1 {
+         h1 {
             margin: 0;
             display: flex;
             align-items: center;
@@ -94,6 +94,11 @@
             padding: 10px;
             position: relative;
             bottom: 0;
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
         }
     </style>
 </head> 
