Midterm clean up

--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -107,7 +107,7 @@
             </p>
 
             <figure>
-                <img src="/itis3135/hobby/images/basket.jpg" alt="Different professionals playing sports">
+                <img src="images/basket.jpg" alt="Man dunking a basketball on someone else">
                 <figcaption>
                     There are a variety of sports that entertain and bring joy to people worldwide. 
                     The sports community has become an integral part of many people's lives and continues to grow.
@@ -133,7 +133,7 @@
             <br>
 
             <figure>
-                <img src="/itis3135/hobby/images/footballpic.jpg" alt="Football pic from highschool">
+                <img src="images/footballpic.jpg" alt="Football pic from highschool">
                 <figcaption>
                     This is a picture of me from 2021 during my second year playing football. 
                     I started in 2020 during quarantine and played as a starter for two years. 
@@ -173,7 +173,7 @@
             </form>
 
             <figure>
-                <img src="/itis3135/hobby/images/footballsix.webp" alt="football">
+                <img src="images/footballsix.webp" alt="kid snapping football">
                 <figcaption>
                     Fall is the typical season for football. 
                     The game requires coordination and teamwork between players and coaches. 
@@ -214,7 +214,7 @@
             </form>
 
             <figure>
-                <img src="/itis3135/hobby/images/snowboardingmtns.webp" alt="two people skiing and snowboarding">
+                <img src="images/snowboardingmtns.webp" alt="someone snowboarding">
                 <figcaption>
                     Snowboarding is a winter sport that involves strapping into a snowboard with specialized boots. 
                     A key tip for beginners is to remember "heels up" and "toes down," 
@@ -259,7 +259,7 @@
             </form>
             <br>
             <figure>
-                <img src="/itis3135/hobby/images/runningman.jpg" alt="man running">
+                <img src="images/runningman.jpg" alt="man running">
                 <figcaption>
                     Running is a great way to build endurance and get started with sports. 
                     Different running techniques can improve efficiency and overall performance.
@@ -293,7 +293,7 @@
             </form>
 
             <figure>
-                <img src="/itis3135/hobby/images/sportsbenefits.jpg" alt="benefits of sports">
+                <img src="images/sportsbenefits.jpg" alt="benefits of sports">
                 <figcaption>
                     <ul>
                         <li>Playing sports enhances physical health by improving cardiovascular fitness, strength, and coordination.</li>
@@ -319,7 +319,7 @@
     </main>
     
     <footer>
-        Designed by <a href="/itis3135/lutabingwagroupinc.com/index.html"><strong>Lutabingwa Group ©2025</strong></a>
+        Designed by <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a>
         <p>
             <a href="https://validator.w3.org/check?uri=referer" id="validation-link-html">
             <img src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!"></a> |
