--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -16,7 +16,7 @@
         <h2>Jonathan Lutabingwa: Introduction</h2>
 
         <figure>
-            <img src="/itis3135/images/IMG_9487.JPG" alt="A picture of me">
+            <img src="images/IMG_9487.JPG" alt="A picture of me">
             <figcaption>Me after dinner with family</figcaption>
         </figure>
 
