--- a/itis3135/lutabingwagroupinc.com/index.html
+++ b/itis3135/lutabingwagroupinc.com/index.html
@@ -105,7 +105,7 @@
 
 <body>
     <header>
-        <h1>Lutabingwa Group, Inc <img src="/itis3135/images/lutabingwasgroup.png" alt="Lutabingwa Group Logo"></h1>
+        <h1>Lutabingwa Group, Inc <img src="../images/lutabingwasgroup.png" alt="Lutabingwa Group Logo"></h1>
         <nav>
             <a href="./">Home</a>
             ||
