background for hobby

--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -9,7 +9,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #f5e6cc;
             color: #333;
             margin: 0;
             padding: 0;
@@ -54,7 +54,7 @@
             margin-top: 20px; 
         }
         table, th, td { 
-            border: 1px solid black; 
+            border: 1px solid rgb(33, 31, 31); 
         }
         th, td { 
             padding: 10px; 
@@ -278,9 +278,9 @@
             
             <table>
                 <tr><th>Sport</th><th>Main Equipment</th></tr>
-                <tr><td>Basketball</td><td>Ball, Hoop</td></tr>
-                <tr><td>Soccer</td><td>Ball, Goalpost</td></tr>
-                <tr><td>Tennis</td><td>Racket, Ball</td></tr>
+                <tr><td>Basketball</td><td>Basketball, Hoop</td></tr>
+                <tr><td>Soccer</td><td>Soccer Ball, Soccer Goal</td></tr>
+                <tr><td>Tennis</td><td>Tennis Racket, Tennis Ball</td></tr>
                 <tr><td>Hockey</td><td>Stick, Puck</td></tr>
             </table>
         </section>
@@ -315,12 +315,21 @@
 
         <section id="ai">
             <h2>AI Prompts</h2>
+            <figure>
+                <img src="images/chatgpt2.webp" alt="Chat-GPT">
+                <figcaption>
+                    I chose to use Chat-GPT for my AI prompts. 
+                </figcaption>
+            </figure>
+
+            <h3>Prompts</h3>
+
             <ul>
-                <li>Guide me through accessing a file outside a folder that I'm currently in</li>
-                <li>Guide me through making a javascript script that hides an element</li>
-                <li>Give me three colors that are appealing to the eye and are similar shades</li>
+                <li>Guide me through accessing a file outside the folder that I'm currently in.</li>
+                <li>Guide me through making a javascript script that hides an element.</li>
+                <li>Give me three colors that are appealing to the eye and are similar shades for CSS.</li>
                 <li>What are some reasons why an image may not show up on my website?</li>
-                <li>Give me a table that lists all the important CSS properties and what they do</li>
+                <li>Give me a table that lists all the important CSS properties and what they do.</li>
             </ul>
 
         </section>
@@ -328,6 +337,9 @@
     
     <footer>
         Designed by <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a>
+        <br>
+        <br>
+        <a href="https://www.freecodecamp.org/certification/jonathanlutabingwa/responsive-web-design"> Certified in Responsive Web Design</a><em> 2025</em>
         <p>
             <a href="https://validator.w3.org/check?uri=referer" id="validation-link-html">
             <img src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!"></a> |
