--- a/itis3135/stuff/Cr@PpyPaGE.html
+++ b/itis3135/stuff/Cr@PpyPaGE.html
@@ -37,7 +37,7 @@
     <p><u>Click on this link</u></p>
     <h1> did i get you C : </h1>
     
-    <img src="/itis3135/images/monk.jpg" alt="monk" width="400" height="400">
+    <img src="../images/monk.jpg" alt="monk" width="400" height="400">
     <h3>My perfect GoRillA</h3>
     
     <p class="papyrus">I LOVE PAPYRUS.</p>
