--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
             font-family: Tahoma;
             font-size: 16px;
             }
+            
             h2 {
-                color: rgb(77, 64, 50)
+                color: rgb(77, 64, 50);
+                margin: 1em auto;
+                text-align: center;
             }
 
     
-            h1, p, a, h2 {
+            h1, p, a {
             margin: 1em auto;
             text-align: center;
             }
