--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -43,9 +43,16 @@
         }
         footer {
             background: #005f73;
-            color: white;
+            color: #f5e6cc;
             padding: 10px;
             margin-top: 20px;
+        }
+        footer a {
+            color: #f5e6cc;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
         }
         table 
         { 
