--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -42,7 +42,7 @@
             </p>
                 <ul>
                     <li><strong>Contrast:</strong> Minimal contrast with a basic color scheme, making it visually unappealing.</li>
-                    <li><strong>Repetition:</strong> Cnsistent but, the design is very simplistic and lacks engaging elements.</li>
+                    <li><strong>Repetition:</strong> Cosistent but, the design is very simplistic and lacks engaging elements.</li>
                     <li><strong>Alignment:</strong> Content is aligned in a grid, but the cluttered nature of links and text makes it hard to read.</li>
                     <li><strong>Proximity:</strong> Poor spacing between sections can make it hard to find different categories of information.</li>
                 </ul>
