--- a/itis3135/project/project_overview.html
+++ b/itis3135/project/project_overview.html
@@ -31,7 +31,7 @@
         </li>
         <li>
             Submission Form – Users submit fashion ideas & sign up for events. 
-            The page will include a form that will take different inputs that’ll be optional such as images of project ideas and daes of events.
+            The page will include a form that will take different inputs that’ll be optional such as images of project ideas and dates of events.
         </li>
         <li>
             Events Table – Displays upcoming sustainability events. To notify clients of different events being held by our group.  
