--- a/itis3135/project/links.html
+++ b/itis3135/project/links.html
@@ -61,7 +61,7 @@
       <a href="info.html">Sustainability Info</a>
       <a href="why.html">Why Sustainable?</a>
       <a href="examples.html">Fashion Gallery</a>
-      <a href="what-you-can-do.html">Take Action</a>
+      <a href="what-can-you-do.html">Take Action</a>
     </nav>
   </header>
 
@@ -99,7 +99,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 The Conscious Closet | Designed by Jonathan Lutabingwa</p>
+    <p>2025 The Conscious Closet | Designed by <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a></p>
   </footer>
 </body>
 </html>
