--- a/itis3135/project/submission.html
+++ b/itis3135/project/submission.html
@@ -17,7 +17,7 @@
       <a href="info.html">Sustainability Info</a>
       <a href="why.html">Why Sustainable?</a>
       <a href="examples.html">Fashion Gallery</a>
-      <a href="what-you-can-do.html">Take Action</a>
+      <a href="what-can-you-do.html">Take Action</a>
     </nav>
   </header>
 
@@ -33,7 +33,7 @@
         <input type="email" id="email" name="email" required /><br /><br />
 
         <label for="idea">Your Sustainable Fashion Idea:</label><br />
-        <textarea id="idea" name="idea" rows="5" placeholder="Describe your idea..."></textarea><br /><br />
+        <textarea id="idea" name="idea" rows="5" placeholder="Describe your idea."></textarea><br /><br />
 
         <label for="image">Upload Image (optional):</label><br />
         <input type="file" id="image" name="image" accept="image/*" /><br /><br />
@@ -47,7 +47,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 The Conscious Closet | Designed by Jonathan Lutabingwa</p>
+    <p>2025 The Conscious Closet | Designed by <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a></p>
   </footer>
 </body>
 </html>
