--- a/itis3135/project/examples.html
+++ b/itis3135/project/examples.html
@@ -13,6 +13,14 @@
       padding: 20px;
     }
 
+    .gallery-item img {
+        width: 100%;
+        height: 300px; 
+        object-fit: cover; 
+        display: block;
+    }
+
+
     .gallery-item {
       border: 1px solid #ddd;
       border-radius: 10px;
@@ -55,7 +63,7 @@
       <a href="info.html">Sustainability Info</a>
       <a href="why.html">Why Sustainable?</a>
       <a href="examples.html">Fashion Gallery</a>
-      <a href="what-you-can-do.html">Take Action</a>
+      <a href="what-can-you-do.html">Take Action</a>
     </nav>
   </header>
 
@@ -66,11 +74,15 @@
         <img src="images/denim-jacket.jpg" alt="Recycled denim jacket" />
         <div class="caption">Recycled denim jacket with organic cotton tee</div>
       </div>
+      <div class="gallery-item">
+        <img src="images/sustainable_fashion_images.png" alt="Differen examples" />
+        <div class="caption"> Different examples of sustainable fashion with male models</div>
+      </div>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 The Conscious Closet | Designed by Jonathan Lutabingwa</p>
+    <p>2025 The Conscious Closet | Designed by <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a></p>
   </footer>
 </body>
 </html>
