--- a/itis3135/project/index.html
+++ b/itis3135/project/index.html
@@ -11,17 +11,15 @@
     <header>
         <h1>The Conscious Closet - Sustainable Fashion</h1>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="submission.html">Submit Ideas</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="links.html">Sustainable Brands</a></li>
-                <li><a href="info.html">Sustainability Info</a></li>
-                <li><a href="why.html">Why Sustainable?</a></li>
-                <li><a href="examples.html">Fashion Gallery</a></li>
-                <li><a href="what-you-can-do.html">Take Action</a></li>
-            </ul>
-        </nav>
+            <a href="index.html">Home</a>
+            <a href="submission.html">Submit Ideas</a>
+            <a href="events.html">Events</a>
+            <a href="links.html">Sustainable Brands</a>
+            <a href="info.html">Sustainability Info</a>
+            <a href="why.html">Why Sustainable?</a>
+            <a href="examples.html">Fashion Gallery</a>
+            <a href="what-can-you-do.html">Take Action</a>
+          </nav>
     </header>
     <main>
         <section>
@@ -33,7 +31,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 The Conscious Closet | Designed by Jonathan Lutabingwa</p>
-    </footer>
+        <p>2025 The Conscious Closet | Designed by <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a></p>
+      </footer>
 </body>
 </html>
